--- a/resources/lottery.properties
+++ b/resources/lottery.properties
@@ -19,7 +19,8 @@ javax.persistence.validation.mode=none
 
 #------------ H2 ------------
 h2.jdbc.driver=org.h2.Driver
-h2.jdbc.url=jdbc:h2:tcp://127.0.0.1/~/lottery
+#h2.jdbc.url=jdbc:h2:tcp://127.0.0.1/~/lottery
+h2.jdbc.url=jdbc:h2:~/lottery
 h2.hibernate.dialect=org.hibernate.dialect.H2Dialect
 h2.jdbc.username=lottery
 h2.jdbc.password=lottery
